Set up generic app

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,11 @@
   "predef": [
     "_",
     "moment",
-    "angular"
+    "angular",
+    "describe",
+    "expect",
+    "it",
+    "beforeEach",
+    "inject"
   ]
 }
