--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "angular-animate": "^1.4.0-beta.2",
     "angular-bootstrap": "^0.12.0",
     "angular-messages": "^1.3.11",
-    "angular-route": "^1.4.0-beta.2",
+    "angular-new-router": "^0.4.0",
     "bluebird": "^2.9.1",
     "bower": "^1.3.12",
     "browser-sync": "^1.9.1",
