Add a Koa server with mocha.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "politichat",
+  "name": "karmakoangulpify",
   "version": "0.0.0",
   "authors": [
     "threehams <threehams@gmail.com>"
