--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Political chat, whether you like it or not",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "node --harmony-generators ./node_modules/gulp/bin/gulp.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,7 +14,7 @@
     "angular-bootstrap": "^0.12.0",
     "angular-messages": "^1.3.11",
     "angular-new-router": "^0.4.0",
-    "bluebird": "^2.9.1",
+    "bluebird": "^2.9.13",
     "bower": "^1.3.12",
     "browser-sync": "^1.9.1",
     "browserify": "^8.1.1",
@@ -25,11 +25,18 @@
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.4.2",
+    "gulp-mocha": "^2.0.0",
+    "gulp-mocha-co": "^0.4.1-co.3",
     "gulp-uglify": "^1.1.0",
     "hapi": "^8.1.0",
     "joi": "^5.1.0",
+    "koa": "^0.18.1",
+    "koa-router": "^4.2.0",
+    "koa-static": "^1.4.9",
+    "koa-static-folder": "^0.1.5",
     "lodash": "^2.4.1",
     "moment": "^2.9.0",
+    "nodemon": "^1.3.7",
     "partialify": "^3.1.3",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1"
@@ -37,6 +44,9 @@
   "devDependencies": {
     "angular-mocks": "^1.3.10",
     "benchmark": "^1.0.0",
+    "chai": "^2.1.1",
+    "co-mocha": "^1.1.0",
+    "co-supertest": "0.0.8",
     "jade": "^1.9.1",
     "jadeify": "^4.0.0",
     "karma": "^0.12.31",
@@ -47,8 +57,10 @@
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.4",
     "lab": "^5.2.1",
-    "mocha": "^2.1.0",
+    "mocha": "^2.2.1",
     "run-sequence": "^1.0.2",
-    "sinon": "^1.12.2"
+    "sinon": "^1.13.0",
+    "supertest": "^0.15.0",
+    "supertest-as-promised": "^1.0.0"
   }
 }
