--- a/.jshintrc
+++ b/.jshintrc
@@ -17,15 +17,5 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
-  "white": false,
-  "predef": [
-    "_",
-    "moment",
-    "angular",
-    "describe",
-    "expect",
-    "it",
-    "beforeEach",
-    "inject"
-  ]
+  "white": false
 }
