--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-minify-css": "^0.4.2",
     "gulp-mocha": "^2.0.0",
     "gulp-mocha-co": "^0.4.1-co.3",
+    "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
     "hapi": "^8.1.0",
     "joi": "^5.1.0",
