--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
   "dependencies": {
     "angular": "^1.4.0-beta.5",
     "angular-animate": "^1.4.0-beta.5",
-    "angular-bootstrap": "^0.12.0",
     "angular-messages": "^1.4.0-beta.5",
     "angular-route": "^1.4.0-beta.5",
+    "angular-touch": "^1.3.15",
     "bluebird": "^2.9.13",
     "bower": "^1.3.12",
-    "browser-sync": "^2.2.3",
+    "browser-sync": "^2.4.0",
     "browserify": "^9.0.3",
+    "co-body": "^1.1.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-mocha-co": "^0.4.1-co.3",
+    "gulp-gzip": "^1.0.0",
     "gulp-sass": "^1.3.3",
+    "gulp-spawn-mocha": "^2.0.1",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.1.0",
+    "imagemin": "^3.1.0",
+    "imagemin-pngquant": "^4.0.0",
     "jade": "^1.9.2",
     "jadeify": "^4.1.0",
     "koa": "^0.18.1",
@@ -37,6 +43,7 @@
     "moment": "^2.9.0",
     "nodemon": "^1.3.7",
     "partialify": "^3.1.3",
+    "request": "^2.53.0",
     "run-sequence": "^1.0.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
@@ -54,6 +61,7 @@
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
+    "karma-sinon-chai": "^0.3.0",
     "karma-sourcemap-loader": "^0.3.4",
     "mocha": "^2.2.1",
     "sinon": "^1.13.0",
