--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "koa-static": "^1.4.9",
     "lodash": "^3.5.0",
     "moment": "^2.9.0",
+    "node-uuid": "^1.4.3",
     "nodemon": "^1.3.7",
     "partialify": "^3.1.3",
     "request": "^2.53.0",
